# treeprimes

./: Cargo.toml  README.md  app.yml  bench.sh  bench1.sh  install.sh  nat.tgz  threads_sec.csv
bench/: bench1.sh  bench2.sh  explore.sh
bench/results/: gens_pop_200.csv  gens_pop_600.csv  threads_sec.csv
src/: main.rs
